@@ -337,8 +337,8 @@ capture_basic_setup (dc1394camera_t * camera,
       &frame->color_coding);
   DC1394_ERR_RTN(err, "Unable to get color coding");
 
-  frame->bit_depth=0; // to avoid valgrind warnings
-  err = dc1394_video_get_data_depth (camera, &frame->bit_depth);
+  frame->data_depth=0; // to avoid valgrind warnings
+  err = dc1394_video_get_data_depth (camera, &frame->data_depth);
   DC1394_ERR_RTN(err, "Unable to get data depth");
 
   err = dc1394_get_bits_per_pixel (frame->color_coding, &bpp);
