@@ -1,3 +1,6 @@
+2007-12-12 Damien Douxchamps http://damien.douxchamps.net/
+        * SVN 505: change bit_depth -> data_depth for coherency.
+
 2007-12-11 David Moore  <dcm@acm.org>
 	* SVN 504: Added isochronous allocation API in iso.c/iso.h.  Also
 		   includes platform-specific API additions.  Only implemented
